@@ -1,3 +1,9 @@
+2005-08-13  Roland McGrath  <roland@redhat.com>
+
+	* elflint.c (check_program_header): Use ebl_segment_type_name and
+	allow any p_type it recognizes.  Include p_type value in error
+	message for unknown type.
+
 2005-08-13  Ulrich Drepper  <drepper@redhat.com>
 
 	* elflint.c (check_symtab): Simplify last change a bit.  Pass ehdr
